--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>yaroster</groupId>
-    <artifactId>masser</artifactId>
+    <artifactId>Masser</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>masser</name>
+    <name>Masser</name>
 
     <properties>
         <java.version>1.8</java.version>
